classDiagram

    namespace SimulationModel {

        class SimStore {
        }
        class SimJob {
        }
        class SimRobot {
        }
        class SimMachine {
        }
        class SimTool {
        }
        class SimCorridor {
        }
        class SimLayout {
        }

    }

    namespace ConfigurationModel {

        class Order {
        }
        class ProductType {
        }
        class ToolType {
        }

    }

    SimLayout o--> SimRobot: main

    SimCorridor o--> SimRobot: left/right

    SimStore <.. SimRobot: pick/place
    
    SimRobot ..>"one" SimJob: carries

    SimStore ..>"many" SimJob: stores
    SimStore <--o SimMachine: in/out
    SimStore <--o SimCorridor: left/right/main
    SimStore "two"<--o SimLayout: front/back

    SimMachine ..>"one" SimJob: processes
    SimMachine o-->"many" SimTool: contains
    SimMachine ..>"one" SimTool: mounts

    SimJob "many"<--o Order: starts
    SimJob ..> ProductType: current/target

    SimTool ..>"one" ToolType


    style OperationType fill:lightgreen,stroke:green
    style ProductType fill:lightgreen,stroke:green
    style ToolType fill:lightgreen,stroke:green
    style MachineType fill:lightgreen,stroke:green

    style Scenario fill:pink,stroke:red
    style Order fill:pink,stroke:red

    style Layout fill:lightblue,stroke:blue
    style Corridor fill:lightblue,stroke:blue
    style Machine fill:lightblue,stroke:blue


    style SimRobot fill:yellow,stroke:orange
    style SimJob fill:yellow,stroke:orange
    style SimMachine fill:yellow,stroke:orange
    style SimTool fill:yellow,stroke:orange
    style SimStore fill:yellow,stroke:orange
    style SimCorridor fill:yellow,stroke:orange
    style SimLayout fill:yellow,stroke:orange